@@ -67,7 +67,7 @@ The
 .Fa action
 value should be
 .Dq honk .
-Content type must be multipart/form-data.
+Content type should be multipart/form-data if an attachment is included.
 The following values are recognized:
 .Bl -tag -width placename
 .It Fa noise
